fixed window title font size being too big

--- a/src/stylesheets/base.css
+++ b/src/stylesheets/base.css
@@ -5,6 +5,7 @@ html {
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   background-color: white;
   color: black;
+  font-size: 12px;
 }
 
 body {
